erDiagram
    SUMMON_MASTER{
        String id PK
        String name
    }
    SUMMON_VARIANT{
        String id PK
        String Master_ID FK
        String name
        String HP
        String AC
        String prof
        etc pp
    }

    ABILITY_SCORE{
        String T_id PK, FK
        String ability PK
        int proficient
    }

    SKILL{
        String name PK
        String ability FK
    }
    
    SKILL_PROFICIENCY{
        String T_id PK, FK
        String skill PK, FK
        int proficient
    }

    DAMAGE_TYPE{
        String long
        String short
        int isMagical
    }
    DAMAGE_MODIFIER{
        String T_id PK, FK
        String damageType PK,FK
        int modifier
    }


    FEATURE{
        String T_id PK, FK
        int type PK
        String name PK
        String description
    }

    SUMMON_INSTANCE{
        String id PK
        String T_id FK
        String name
    }


    VARIABLE{
        String id PK
        String? T_ID FK
        String? I_ID FK
        String displayName
        String tag
        int value
    }


    SUMMON_MASTER ||--o{ SUMMON_VARIANT: has

    SUMMON_VARIANT ||--o{ SUMMON_INSTANCE: "gets summoned to"
    SUMMON_VARIANT ||--o{ VARIABLE: contains
    SUMMON_VARIANT ||--o{ SKILL_PROFICIENCY: has
    SUMMON_VARIANT ||--o{ ABILITY_SCORE: has
    SUMMON_VARIANT ||--o{ DAMAGE_MODIFIER: has
    SUMMON_VARIANT ||--o{ FEATURE: has

    SUMMON_INSTANCE ||--o{ VARIABLE: contains

    SKILL_PROFICIENCY ||--o{ SKILL: "counts for"

    DAMAGE_MODIFIER ||--o{ DAMAGE_TYPE: modifies

